--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "blockchain-staking",
-  "version": "0.1.0",
-  "scripts": {
-    "serve": "cd frontend && vue-cli-service serve",
-    "deploy": "truffle compile --reset && truffle migrate --reset"
-  },
+  "version": "0.1",
   "author": {
     "name": "Jan Michek",
     "email": "jan@janmichek.cz"
+  },
+  "scripts": {
+    "serve": "cd frontend && vue-cli-service serve",
+    "deploy": "truffle compile && truffle migrate --reset"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
